--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <h2>I Respect Your Decision 💐</h2>
             <form id="noForm">
                 <div class="form-group">
-                    <textarea id="reason" placeholder="Can You Share Your Reason?" required></textarea>
+                    <textarea id="why" placeholder="Can You Share Your Reason?" required></textarea>
                 </div>
                 <button type="submit" class="form-submit">Submit</button>
             </form>
