--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Will You Be My Valentine?</title>
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://valentinesforyou.vercel.app/">
+  <meta property="og:title" content="I have something for you here!">
+  <meta property="og:description" content="I've created something special for you. I hope you'll take a moment to read it.">
+  <meta property="og:image" content="https://github.com/josejardin/vals/blob/main/IMG_1485.jpg">
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <style>
@@ -432,7 +437,7 @@
       <h3>Welcome! 💌</h3>
       <p>I hope you will read my message whenever you have a moment. Take your time and go through it whenever it seems
         appropriate for you; there is absolutely no rush. I appreciate you taking the time to read it at your own free
-        time, and I just wanted to share something that I think is worth your attention.</p>
+        time, and I just wanted to share something that I think is worth your attention. I hope you like it!</p>
       <button onclick="closeEntryPopup()">I Understand</button>
     </div>
   </div>
