--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Will You Be My Valentine?</title>
+  <title>I have something for you!</title>
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://valentinesforyou.vercel.app/">
   <meta property="og:title" content="I have something for you here!">
